fix: menu gap

--- a/online-zoo/assets/sass/components/_navigation.scss
+++ b/online-zoo/assets/sass/components/_navigation.scss
@@ -9,8 +9,8 @@
 
   margin: 0;
   padding: 0;
-
-  width: 472px;
+  gap: 58px;
+  // width: 472px;
 }
 
 .menu__item {
